--- a/compose.yaml
+++ b/compose.yaml
@@ -2,11 +2,12 @@ services:
   database:
     image: 'mongo:latest'
     container_name: chromic_db
-    restart: on-failure
+    restart: always
     environment:
       - 'MONGO_INITDB_DATABASE=chromic'
       - 'MONGO_INITDB_ROOT_PASSWORD=password'
       - 'MONGO_INITDB_ROOT_USERNAME=admin'
+
     ports:
       - "37017:27017"
     volumes:
@@ -14,24 +15,26 @@ services:
       - mongodb-data:/data/db/
       - mongodb-log:/var/log/mongodb/
     networks:
-      - chromic_network
+      - chromic_net
 
-  backend:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: chromic_backend
-    restart: always
-    depends_on:
-      - database
-    ports:
-      - "8080:8080"
-    networks:
-      - chromic_network
+  database_client:
+      image: 'mongo-express:latest'
+      container_name: chromic_db_client
+      restart: always
+      ports:
+        - "8081:8081"
+      environment:
+        ME_CONFIG_MONGODB_URL: mongodb://admin:password@chromic_db:27017/chromic?authSource=admin
+        ME_CONFIG_MONGODB_ENABLE_ADMIN: true
+        ME_CONFIG_MONGODB_ADMINUSERNAME: admin
+        ME_CONFIG_MONGODB_ADMINPASSWORD: password
+        ME_CONFIG_BASICAUTH_USERNAME: admin
+        ME_CONFIG_BASICAUTH_PASSWORD: password
 
-networks:
-    chromic_network:
-        driver: bridge
+      depends_on:
+        - database
+      networks:
+        - chromic_net
 
 volumes:
   mongodb-data:
@@ -41,5 +44,6 @@ volumes:
       driver: local
       name: mongo-log
 
-
-
+networks:
+  chromic_net:
+    driver: bridge
