--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
+
 spring.application.name=chromic
 server.port=8080
-spring.data.mongodb.host=chromic_db
-spring.data.mongodb.port=27017
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=37017
 spring.data.mongodb.database=chromic
-spring.data.mongodb.uri=mongodb://admin:password@chromic_db:27017/chromic?authSource=admin
+spring.data.mongodb.uri=mongodb://admin:password@localhost:37017/chromic?authSource=admin
 
 
 
